--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": ["oclif", "oclif-typescript"],
   "rules": {
-    "object-curly-spacing": "off"
+    "object-curly-spacing": "off",
+    "indent": "off"
   }
 }
