--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
     "chalk": "^4.1.2",
-    "inquirer": "^8.1.2",
+    "enquirer": "^2.3.6",
     "tslib": "^1"
   },
   "devDependencies": {
