--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
-  "extends": ["oclif", "oclif-typescript"],
-  "rules": {
-    "object-curly-spacing": "off",
-    "indent": "off"
-  }
+    "extends": ["oclif", "oclif-typescript"],
+    "rules": {
+        "object-curly-spacing": "off",
+        "indent": "off",
+        "comma-dangle": "off",
+        "semi": "off"
+    }
 }
