--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@oclif/plugin-help": "^3",
     "chalk": "^4.1.2",
     "enquirer": "^2.3.6",
+    "js-yaml": "^4.1.0",
     "tslib": "^1"
   },
   "devDependencies": {
