--- a/src/utils/docker.nginx.yaml
+++ b/src/utils/docker.nginx.yaml
@@ -1,6 +1,2 @@
-FROM node:14-alpine3.14
-WORKDIR /app
-COPY ./package.json ./
-RUN npm install
-COPY . .
-CMD [ "npm", "start" ]
+FROM nginx
+COPY ./default.conf /etc/nginx/conf.d/default.conf
