--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "chalk": "^4.1.2",
         "enquirer": "^2.3.6",
         "js-yaml": "^4.1.0",
-        "rxjs": "^6.6.7",
+        "rxjs": "6.6.7",
         "tslib": "^1"
     },
     "devDependencies": {
